cmake_minimum_required(VERSION 3.15)
project(mymuduo)
set(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_BUILD_TYPE Release)

if(CMAKE_BUILD_TYPE STREQUAL Debug)
message(STATUS ${CMAKE_BUILD_TYPE})
set(CMAKE_CXX_FLAGS "${CMKAE_CXX_FLAGS} -g -Wall")
elseif(CMAKE_BUILD_TYPE STREQUAL Release)
message(STATUS ${CMAKE_BUILD_TYPE})
set(CMAKE_CXX_FLAGS "${CMKAE_CXX_FLAGS} -O2 -Wall -DNDEBUG")
endif()

add_subdirectory(net)